"Changed footer URL to my Linkedin Profile"

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
       </div>
 
       <footer>
-        Developed by <a href="#" target="_blank">Roberto Collazo</a>
+        Developed by
+        <a href="https://www.linkedin.com/in/roberto-collazo/" target="_blank"
+          >Roberto Collazo</a
+        >
       </footer>
     </div>
 
