Changed the avatar picture Added new button's name Added my social media links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./Assets/avatar.png" alt="" />
-        <p>@robertocollazo</p>
+        <img src="./Assets/avatar.jpeg" alt="" />
+        <p>Roberto Collazo</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -24,19 +24,17 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">Button 1</a>
+          <a href="#" target="_blank">Portfolio</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">Button 2</a>
+          <a href="#" target="_blank">CV</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">Button 3</a>
-        </li>
-
-        <li>
-          <a href="#" target="_blank">Button 4</a>
+          <a href="mailto:collazo.roberto@yahoo.com.br" target="_blank"
+            >Send me an e-mail</a
+          >
         </li>
       </ul>
       <div id="social-media">
@@ -46,10 +44,10 @@
         <a href="https://www.linkedin.com/in/roberto-collazo/" target="_blank"
           ><ion-icon name="logo-linkedin"></ion-icon
         ></a>
-        <a href="#" target="_blank"
+        <a href="https://wa.me/+15794219451" target="_blank"
           ><ion-icon name="logo-whatsapp"></ion-icon
         ></a>
-        <a href="@" target="_blank"
+        <a href="https://discord.com/users/robertocollazo" target="_blank"
           ><ion-icon name="logo-discord"></ion-icon
         ></a>
       </div>
