Fixed an error where started with light mode but the wrong avatar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./Assets/avatar.jpeg" alt="" />
+        <img src="./Assets/avatar-light.jpeg" alt="" />
         <p>Roberto Collazo</p>
       </div>
       <div id="switch" onclick="toggleMode()">
